# BetParser

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
config/: log.py  parser.py
config/json/: parser.json
src/parsers/: base_parser.py  bet365_parser.py
