[project]
name = "parser"
version = "0.1.0"
dependencies = [
    "black>=25.1.0",
    "fastapi>=0.115.12",
    "loguru>=0.7.3",
    "playwright>=1.51.0",
    "pre-commit>=4.2.0",
    "uvicorn>=0.34.0",
]

[tool.ruff]
line-length = 120
select = ["E", "F", "W"]
ignore = ["E501"]
target-version = "py311"
